@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-03T16:30:58Z",
+  "timestamp" : "2022-06-04T01:46:42Z",
   "count_outdated" : 229,
   "uniques_outdated" : 50,
   "count" : 236,
-  "uniques" : 53,
+  "uniques" : 54,
   "views" : [
     {
       "timestamp": "2022-05-21T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -23,6 +23,13 @@
       "timestamp": "2022-05-26T00:00:00Z",
       "count": 4,
       "count_minmax": [ 4, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
