@@ -4,7 +4,7 @@
   "views": [
     {
       "timestamp": "2022-05-21T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -15,6 +15,11 @@
     {
       "timestamp": "2022-05-26T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-03T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
